<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/page_title_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4.0dip"
        android:background="@drawable/bg_title_mapsearch"
        android:gravity="center" >

        <TextView
            android:id="@+id/title_text"
            style="@style/Text.primaryTitle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:textColor="#ff000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/page_title_top"
        android:layout_margin="10dip"
        android:text="@string/str_version"
        android:textColor="#666666"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_version"
        android:layout_margin="10dip"
        android:text="@string/str_appupdate"
        android:textColor="#666666"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_edit"
        android:layout_margin="10dip"
        android:background="@drawable/btn_default_small"
        android:text="@string/menu_appupdate"
        android:textSize="16sp" />

</RelativeLayout>