<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btn_favorite_tabheader"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/listdef" >

    <LinearLayout
        android:id="@+id/LinearLayout_favor_top"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@drawable/poidetailbg"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/RelativeLayout_favor_topleft"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" >

            <Button
                android:id="@+id/btn_favorite_tab1"
                android:layout_width="wrap_content"
                android:layout_height="50.0dip"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/icon_fav_addr"
                android:drawablePadding="5.0dip"
                android:gravity="center"
                android:paddingLeft="10.0dip"
                android:text="@string/favorite_point"
                android:textColor="#ff000000"
                android:textSize="18.0sp" />

            <ImageButton
                android:id="@+id/btn_favorite_addr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/btn_favor_selected"
                android:contentDescription="@null" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout_favor_topright"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"  >

            <Button
                android:id="@+id/btn_favorite_tab2"
                android:layout_width="wrap_content"
                android:layout_height="50.0dip"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/icon_fav_route"
                android:drawablePadding="5.0dip"
                android:gravity="center"
                android:paddingLeft="10.0dip"
                android:text="@string/favorite_line"
                android:textColor="#ff000000"
                android:textSize="18.0sp" />
            
            <ImageButton
                android:id="@+id/btn_favorite_route"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/btn_favor_no"
                android:contentDescription="@null" />
            
        </RelativeLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_fav_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/fav_bottom_bar"
        android:layout_below="@id/LinearLayout_favor_top"
        android:background="@color/listdef"
        android:orientation="horizontal" >

        <!--
	        <TextView
	            android:id="@+id/emptyList"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:gravity="center"
	            android:text="No Notes!"
	            android:textColor="#ff000000"
	            android:textSize="16.0dip" />

        -->

        <ListView
            android:id="@+id/ListView_favorite"
            style="@style/ListView.defListEx"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fav_bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_alignParentBottom="true"
        android:background="#ffc8cfdb" >

        <!-- 账号，同步 -->
        <!--
	        <RelativeLayout
	            android:id="@+id/syncinfo"
	            android:layout_width="fill_parent"
	            android:layout_height="60.0dip"
	            android:background="@android:color/transparent"
	            android:orientation="horizontal"
	            android:visibility="gone" >
	            <Button
	                android:id="@+id/btnSync"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:layout_centerVertical="true"
	                android:layout_marginRight="20.0dip"
	                android:background="@drawable/btn_account_sync"
	                android:paddingLeft="15.0dip"
	                android:paddingRight="15.0dip"
	                android:text="同步"
	                android:textColor="#ff000000" />
	            <LinearLayout
	                android:id="@+id/accountinfo"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:layout_marginLeft="20.0dip"
	                android:layout_toLeftOf="@id/btnSync"
	                android:gravity="center"
	                android:orientation="vertical" >
	                <TextView
	                    android:id="@+id/account_info"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="left"
	                    android:text="Account Name"
	                    android:textColor="#ff000000"
	                    android:textSize="16.0dip" />
	            </LinearLayout>
	        </RelativeLayout>

        -->
        <!-- 全选，取消，删除 -->

        <RelativeLayout
            android:id="@+id/fav_bat_del"
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:background="@android:color/transparent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnCancelAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:background="@drawable/btn_account_sync"
                android:text="@string/cancel_all"
                android:textColor="#ff000000" />

            <Button
                android:id="@+id/btnSelAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/btn_account_sync"
                android:text="@string/select_all"
                android:textColor="#ff000000" />

            <Button
                android:id="@+id/btnDelAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/btn_account_sync"
                android:text="@string/delete"
                android:textColor="#ff000000" />
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>