<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff1f1f1"
    tools:ignore="UselessParent" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title1"
        android:orientation="horizontal"
        android:paddingBottom="13.0dip"
        android:paddingTop="13.0dip" >

        <LinearLayout
            android:id="@+id/LinearLayout_navkind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8.0dip"
            android:layout_marginTop="8.0dip"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7.0dip"
                android:contentDescription="@null"
                android:src="@drawable/ic_route" />
        </LinearLayout>

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="6.0dip"
            android:layout_marginTop="3.0dip"
            android:background="#ffc3c9d3"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/RouteSumInfo"
                style="@style/Text.primaryTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/RouteSubInfo"
                style="@style/Text.secondaryTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_nav_tab"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/poidetailbg"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/LinearLayout_nav_tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/RelativeLayout_nav_tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_routemode_tab1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/btn_nav_tab_normal"
                    android:text="@string/commend"
                    android:textColor="@color/tab_selected"
                    android:textSize="14.0sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_nav_tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/RelativeLayout_nav_tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_routemode_tab2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/btn_nav_tab"
                    android:text="@string/less_transfer"
                    android:textColor="@color/tab_not_selected"
                    android:textSize="14.0sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_nav_tab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/RelativeLayout_nav_tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_routemode_tab3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/btn_nav_tab"
                    android:text="@string/less_onfoot"
                    android:textColor="@color/tab_not_selected"
                    android:textSize="14.0sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_nav_tab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/RelativeLayout_nav_tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_routemode_tab4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/btn_nav_tab"
                    android:text="@string/less_cheap"
                    android:textColor="@color/tab_not_selected"
                    android:textSize="14.0sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_nav_tab5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/RelativeLayout_nav_tab5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_routemode_tab5"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/btn_nav_tab"
                    android:text="@string/less_commend"
                    android:textColor="@color/tab_not_selected"
                    android:textSize="14.0sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/BusRouteListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/LinearLayout_nav_tab"
        android:layout_below="@id/LinearLayout01"
        android:background="#fff1f1f1"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/list_divider"
        android:dividerHeight="1.0dip" />

</RelativeLayout>