<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        android:id="@+id/RelativeLayout_roadsearch_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_plate_global"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/imagebtn_roadsearch_startoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="6.0dip"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_nav_drag_down"
            android:contentDescription="@null" />

        <ImageButton
            android:id="@+id/imagebtn_roadsearch_goaloption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/imagebtn_roadsearch_startoption"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="8.0dip"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_nav_drag_down"
            android:contentDescription="@null" />

        <AutoCompleteTextView
            android:id="@+id/autotextview_roadsearch_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/imagebtn_roadsearch_startoption"
            android:layout_marginLeft="5.0dip"
            android:layout_toLeftOf="@id/imagebtn_roadsearch_startoption"
            android:layout_toRightOf="@+id/LinearLayout_roadsearch"
            android:background="@drawable/text_search"
            android:dropDownVerticalOffset="1.0dip"
            android:hint="@string/begin"
            android:imeOptions="actionDone"
            android:inputType="text|textAutoComplete"
            android:paddingRight="37.0dip"
            android:singleLine="true"
            android:textSize="16.0sp" />
        
        <ImageButton
            android:id="@+id/imagebtn_voice_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/autotextview_roadsearch_start"
            android:layout_alignRight="@id/autotextview_roadsearch_start"
            android:background="#00000000"
            android:clickable="true"
            android:paddingBottom="8.0dip"
            android:paddingLeft="5.0dip"
            android:paddingRight="8.0dip"
            android:src="@drawable/btn_voice_search"
            android:contentDescription="@null" />

        <AutoCompleteTextView
            android:id="@+id/autotextview_roadsearch_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/imagebtn_roadsearch_goaloption"
            android:layout_marginLeft="5.0dip"
            android:layout_toLeftOf="@id/imagebtn_roadsearch_goaloption"
            android:layout_toRightOf="@+id/LinearLayout_roadsearch"
            android:background="@drawable/text_search"
            android:dropDownVerticalOffset="1.0dip"
            android:hint="@string/end"
            android:imeOptions="actionDone"
            android:inputType="text|textAutoComplete"
            android:paddingRight="37.0dip"
            android:singleLine="true"
            android:textSize="16.0sp" />

        <ImageButton
            android:id="@+id/imagebtn_voice_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/autotextview_roadsearch_goal"
            android:layout_alignRight="@id/autotextview_roadsearch_goal"
            android:background="#00000000"
            android:clickable="true"
            android:paddingBottom="8.0dip"
            android:paddingLeft="5.0dip"
            android:paddingRight="8.0dip"
            android:src="@drawable/btn_voice_search"
            android:contentDescription="@null" />

        <LinearLayout
            android:id="@+id/LinearLayout_roadsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@id/autotextview_roadsearch_start"
            android:layout_alignBottom="@+id/autotextview_roadsearch_goal"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imagebtn_roadsearch_exchange"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="6.0dip"
                android:background="@drawable/btn_nav_drag_down_change"
                android:src="@drawable/icon_change"
                android:contentDescription="@null" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_below="@id/imagebtn_roadsearch_goaloption"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="6.0dip"
            android:layout_marginTop="6.0dip"
            android:orientation="horizontal"
            android:paddingBottom="6.0dip" >

            <RelativeLayout
                android:id="@+id/layout_guide_time"
                android:layout_width="130dp"
                android:layout_height="41.0dip"
                android:layout_gravity="center|left"
                android:background="@drawable/btn_default_small" >

                <ImageView
                    android:id="@+id/img_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="41.0dip"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_vertical|left"
                    android:src="@drawable/location_icon_clock"
                    android:contentDescription="@null" />

                <Button
                    android:id="@+id/textview_starttime"
                    android:layout_width="wrap_content"
                    android:layout_height="41.0dip"
                    android:layout_toRightOf="@+id/img_clock"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/start_time"
                    android:textColor="#ff464646"
                    android:textSize="18dip" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_startTime"
                android:layout_width="70.0dip"
                android:layout_height="41.0dip"
                android:layout_gravity="center|left"
                android:layout_weight="0.25"
                android:background="@drawable/btn_default_small"
                android:text=""
                android:textColor="#ff464646"
                android:textSize="18dip" />

            <ImageButton
                android:id="@+id/imagebtn_roadsearch_search"
                android:layout_width="100.0dip"
                android:layout_height="41.0dip"
                android:layout_gravity="right"
                android:layout_weight="0.25"
                android:background="@drawable/btn_default_small"
                android:src="@drawable/btn_poi_search_normal"
                android:contentDescription="@null" />
        </LinearLayout>
    </RelativeLayout>
